# RustLang

./: .gitignore
banking_api/: Cargo.toml
banking_api/src/: config.rs  db.rs  main.rs
banking_api/src/handlers/: mod.rs
banking_api/src/models/: mod.rs
banking_api/src/routes/: mod.rs
banking_api/src/services/: mod.rs
banking_cli_app/: .gitignore  Cargo.toml
banking_cli_app/jsons/: accounts.json  transactions.json
banking_cli_app/src/: account.rs  consts.rs  main.rs  menu.rs  storage.rs
book_manager/: Cargo.toml
book_manager/src/: library.rs  main.rs
enum_task/: Cargo.toml
enum_task/src/: main.rs
guest_book/: Cargo.toml
guest_book/src/: main.rs
hashmap_vector/: Cargo.toml
hashmap_vector/src/: main.rs
hello_world/src/: main.rs  (+1 more)
hms/: docker-compose.yml
hms/backend/: Cargo.toml  diesel.toml
hms/backend/migrations/2025-07-09-113026_create_users/: up.sql
hms/backend/migrations/2025-07-09-113316_create_patients/: up.sql
hms/backend/migrations/2025-07-09-114738_create_appointments/: up.sql
hms/backend/migrations/2025-07-09-140012_billing_invoices/: up.sql
hms/backend/migrations/2025-07-09-140452_create_inventory/: up.sql
hms/backend/migrations/2025-07-09-140848_create_laboratory/: up.sql
hms/backend/src/: main.rs  schema.rs
hms/backend/src/middleware/: websocket.rs
hms/backend/src/models/: appointment.rs  billing.rs  inventory.rs  laboratory.rs
hms/backend/src/routes/: appointments.rs  auth.rs  billing.rs  inventory.rs  laboratory.rs
min_student_tracker/: Cargo.toml
todo_actix/: .env.example  Cargo.toml  diesel.toml
(+31 files in other folders)
