[package]
name = "banking_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
argon2 = "0.5.3"
chrono = "0.4.41"
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.45.1"
uuid = "1.17.0"
